client/src/styles/lobby.css
#lobby-screen {
  background-image: url(../../public/images/background_lobby.jpg);
}
#lobby-container {
  display: grid;
  grid-template-columns: 0.8fr 0.2fr;
  gap: 2em;
}
#character-container {
  display: flex;
  flex-direction: row;
  gap: 1em;
}

#start {
  background-color: green;
  color: black;
  width: 100%;
}

